--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       loadSpreadsheet();
       loadState();
       applyLayout(loadCols());
-      layoutSelect.value = loadCols; // セレクトの表示も復元
+      layoutSelect.value = loadCols(); // セレクトの表示も復元
     };
   </script>
 </body>
