--- a/index.html
+++ b/index.html
@@ -18,6 +18,31 @@
     .move-up { top: 2px; }
     .move-down { top: 24px; }
     .volume-slider { position: absolute; left: 40px; top: 4px; width: 80px; z-index: 10; }
+
+    @media (max-width: 600px) {
+      #controls {
+        flex-direction: column;
+        gap: 14px;
+        font-size: 18px;
+        paddin: 14px 6px;
+      }
+      .control-left, .control-right {
+        flex-direction: column;
+        gap: 10px;
+        align-items: stretch;
+      }
+      select, input, button {
+        font-size: 18px;
+        padding: 10px 8px;
+        width: 100%;
+        min-height: 42px;
+        box-sizing: border-box;
+      }
+      #sheetVideoList,#videoUrl {
+        width: 100% !important;
+      }
+    }
+    
   </style>
 </head>
 <body>
