--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         flex-direction: column;
         gap: 14px;
         font-size: 18px;
-        paddin: 14px 6px;
+        padding: 14px 6px;
       }
       .control-left, .control-right {
         flex-direction: column;
