--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>YouTubeプレイヤー（軽量高速版）</title>
   <style>
     body { margin: 0; background: #000; color: #fff; font-family: sans-serif; }
