--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       background: red;
       color: white;
       border: none;
-      padding: var(--close-btn-padding, 6px 10px);
+      padding: var(--close-btn-padding, 1vw 2vw);
       cursor: pointer;
       position: absolute;
-      top: 8px;
-      right: 8px;
-      font-size: var(--close-btn-font, 16px);
+      top: 2vw;
+      right: 2vw;
+      font-size: var(--close-btn-font, 3vw);
     }
     #controls {
       display: flex;
@@ -105,50 +105,63 @@
     }
     .remove-btn, .move-btn {
       position: absolute;
-      font-size: var(--move-btn-font, 14px);
+      font-size: var(--move-btn-font, 2vw);
       border: none;
-      padding: var(--move-btn-padding, 4px 0);
+      padding: var(--move-btn-padding, 0.7vw 0);
       cursor: pointer;
       z-index: 10;
-      width: var(--move-btn-width, 27px);
-      height: var(--move-btn-height, 27px);
+      width: var(--move-btn-width, 6vw);
+      height: var(--move-btn-height, 6vw);
       display: flex; align-items: center; justify-content: center;
     }
-    .remove-btn { top: 2px; right: 2px; background: red; color: #fff; }
-    .move-btn { left: 2px; background: #444; color: #fff; }
-    .move-up { top: 2px; }
-    .move-down { top: calc(var(--move-btn-height, 27px) + 4px); }
+    .remove-btn { top: 1vw; right: 1vw; background: red; color: #fff; }
+    .move-btn { left: 1vw; background: #444; color: #fff; }
+    .move-up { top: 1vw; }
+    .move-down { top: calc(var(--move-btn-height, 6vw) + 2vw); }
     .volume-slider {
       position: absolute;
-      left: 40px;
-      top: 4px;
-      width: var(--slider-width, 80px);
-      height: var(--slider-height, 24px);
+      left: 7vw;
+      top: 1vw;
+      width: var(--slider-width, 18vw);
+      height: var(--slider-height, 3vw);
       z-index: 10;
       accent-color: #178582;
     }
 
-    /* デフォルト: 画面幅でサイズ自動調整 */
     :root {
-      --move-btn-width: 27px; --move-btn-height: 27px; --move-btn-font: 14px; --move-btn-padding: 4px 0;
-      --slider-width: 80px; --slider-height: 24px;
-      --close-btn-font: 16px; --close-btn-padding: 6px 10px;
+      --move-btn-width: 6vw;
+      --move-btn-height: 6vw;
+      --move-btn-font: 2vw;
+      --move-btn-padding: 0.7vw 0;
+      --slider-width: 18vw;
+      --slider-height: 3vw;
+      --close-btn-font: 3vw;
+      --close-btn-padding: 1vw 2vw;
     }
     @media (max-width: 600px) {
       :root {
-        --move-btn-width: 38px; --move-btn-height: 38px; --move-btn-font: 22px; --move-btn-padding: 6px 0;
-        --slider-width: 110px; --slider-height: 34px;
-        --close-btn-font: 28px; --close-btn-padding: 10px 16px;
+        --move-btn-width: 10vw;
+        --move-btn-height: 10vw;
+        --move-btn-font: 4vw;
+        --move-btn-padding: 1vw 0;
+        --slider-width: 30vw;
+        --slider-height: 5vw;
+        --close-btn-font: 5vw;
+        --close-btn-padding: 2vw 3vw;
       }
     }
     @media (min-width: 1024px) {
       :root {
-        --move-btn-width: 32px; --move-btn-height: 32px; --move-btn-font: 16px; --move-btn-padding: 4px 0;
-        --slider-width: 100px; --slider-height: 28px;
-        --close-btn-font: 22px; --close-btn-padding: 7px 14px;
+        --move-btn-width: 4vw;
+        --move-btn-height: 4vw;
+        --move-btn-font: 1.3vw;
+        --move-btn-padding: 0.4vw 0;
+        --slider-width: 12vw;
+        --slider-height: 2vw;
+        --close-btn-font: 2vw;
+        --close-btn-padding: 0.7vw 1.4vw;
       }
     }
-    /* ユーザー設定値が上書きされる場合はJSでstyleを当てる */
   </style>
 </head>
 <body>
@@ -186,19 +199,19 @@
         <legend style="color:#fff;font-size:15px;">ボタン/スライダーのサイズ</legend>
         <label>
           上下ボタン:
-          <input type="range" id="moveBtnSize" min="20" max="60" value="0" style="width:110px;">
+          <input type="range" id="moveBtnSize" min="2" max="12" step="0.1" value="0" style="width:110px;">
           <span id="moveBtnSizeLabel"></span>
         </label>
         <br>
         <label>
           音量スライダー:
-          <input type="range" id="sliderSize" min="60" max="200" value="0" style="width:110px;">
+          <input type="range" id="sliderSize" min="10" max="40" step="0.5" value="0" style="width:110px;">
           <span id="sliderSizeLabel"></span>
         </label>
         <br>
         <label>
           閉じるボタン:
-          <input type="range" id="closeBtnSize" min="16" max="48" value="0" style="width:110px;">
+          <input type="range" id="closeBtnSize" min="1" max="8" step="0.1" value="0" style="width:110px;">
           <span id="closeBtnSizeLabel"></span>
         </label>
         <br>
@@ -211,44 +224,42 @@
 
   <script src="https://www.youtube.com/iframe_api"></script>
   <script>
-    // --- サイズ設定の保存/読込/反映 ---
-    // デフォルト値の算出
+    // --- サイズ設定の保存/読込/反映（vw単位） ---
     function getDefaultSizes() {
-      // メディアクエリと同じ条件でデフォルトを返す
       const w = window.innerWidth;
       if (w < 600) {
         return {
-          moveBtn: 38,
-          moveBtnFont: 22,
-          slider: 110,
-          sliderHeight: 34,
-          closeBtn: 28
+          moveBtn: 10,        // vw
+          moveBtnFont: 4,     // vw
+          slider: 30,         // vw
+          sliderHeight: 5,    // vw
+          closeBtn: 5         // vw
         };
       } else if (w >= 1024) {
         return {
-          moveBtn: 32,
-          moveBtnFont: 16,
-          slider: 100,
-          sliderHeight: 28,
-          closeBtn: 22
+          moveBtn: 4,
+          moveBtnFont: 1.3,
+          slider: 12,
+          sliderHeight: 2,
+          closeBtn: 2
         };
       } else {
         return {
-          moveBtn: 27,
-          moveBtnFont: 14,
-          slider: 80,
-          sliderHeight: 24,
-          closeBtn: 16
+          moveBtn: 6,
+          moveBtnFont: 2,
+          slider: 18,
+          sliderHeight: 3,
+          closeBtn: 3
         };
       }
     }
 
     function saveCustomSizes(sizes) {
-      localStorage.setItem('customButtonSizes', JSON.stringify(sizes));
+      localStorage.setItem('customButtonSizesVW', JSON.stringify(sizes));
     }
     function loadCustomSizes() {
       try {
-        return JSON.parse(localStorage.getItem('customButtonSizes')) || {};
+        return JSON.parse(localStorage.getItem('customButtonSizesVW')) || {};
       } catch(e) {
         return {};
       }
@@ -256,37 +267,34 @@
 
     function applyCustomSizes() {
       const sizes = Object.assign(getDefaultSizes(), loadCustomSizes());
-      document.documentElement.style.setProperty('--move-btn-width', sizes.moveBtn + 'px');
-      document.documentElement.style.setProperty('--move-btn-height', sizes.moveBtn + 'px');
-      document.documentElement.style.setProperty('--move-btn-font', sizes.moveBtnFont + 'px');
-      document.documentElement.style.setProperty('--move-btn-padding', '4px 0');
-      document.documentElement.style.setProperty('--slider-width', sizes.slider + 'px');
-      document.documentElement.style.setProperty('--slider-height', (sizes.sliderHeight||24) + 'px');
-      document.documentElement.style.setProperty('--close-btn-font', sizes.closeBtn + 'px');
-      document.documentElement.style.setProperty('--close-btn-padding', '6px 10px');
-      // UIラベルも更新
+      document.documentElement.style.setProperty('--move-btn-width', sizes.moveBtn + 'vw');
+      document.documentElement.style.setProperty('--move-btn-height', sizes.moveBtn + 'vw');
+      document.documentElement.style.setProperty('--move-btn-font', sizes.moveBtnFont + 'vw');
+      document.documentElement.style.setProperty('--move-btn-padding', (sizes.moveBtn * 0.12).toFixed(2) + 'vw 0');
+      document.documentElement.style.setProperty('--slider-width', sizes.slider + 'vw');
+      document.documentElement.style.setProperty('--slider-height', (sizes.sliderHeight||3) + 'vw');
+      document.documentElement.style.setProperty('--close-btn-font', sizes.closeBtn + 'vw');
+      document.documentElement.style.setProperty('--close-btn-padding', (sizes.closeBtn * 0.2).toFixed(2) + 'vw ' + (sizes.closeBtn * 0.4).toFixed(2) + 'vw');
       updateSizeSliders(sizes);
     }
 
     function updateSizeSliders(sizes) {
-      // スライダーの値とラベルをUIに反映
       document.getElementById('moveBtnSize').value = sizes.moveBtn;
-      document.getElementById('moveBtnSizeLabel').textContent = sizes.moveBtn + 'px';
+      document.getElementById('moveBtnSizeLabel').textContent = sizes.moveBtn + 'vw';
       document.getElementById('sliderSize').value = sizes.slider;
-      document.getElementById('sliderSizeLabel').textContent = sizes.slider + 'px';
+      document.getElementById('sliderSizeLabel').textContent = sizes.slider + 'vw';
       document.getElementById('closeBtnSize').value = sizes.closeBtn;
-      document.getElementById('closeBtnSizeLabel').textContent = sizes.closeBtn + 'px';
+      document.getElementById('closeBtnSizeLabel').textContent = sizes.closeBtn + 'vw';
     }
 
     function setSizeAndSave(type, value) {
-      // moveBtn, slider, closeBtn
       const sizes = Object.assign(getDefaultSizes(), loadCustomSizes());
       if (type === "moveBtn") {
         sizes.moveBtn = Number(value);
-        sizes.moveBtnFont = Math.round(value * 0.58);
+        sizes.moveBtnFont = Number((value * 0.33).toFixed(2));
       } else if (type === "slider") {
         sizes.slider = Number(value);
-        sizes.sliderHeight = Math.round(value * 0.3);
+        sizes.sliderHeight = Number((value * 0.16).toFixed(2));
       } else if (type === "closeBtn") {
         sizes.closeBtn = Number(value);
       }
@@ -295,14 +303,12 @@
     }
 
     function resetSizes() {
-      localStorage.removeItem('customButtonSizes');
+      localStorage.removeItem('customButtonSizesVW');
       applyCustomSizes();
     }
 
-    // スライダーUIのイベント
     window.addEventListener('DOMContentLoaded', () => {
       applyCustomSizes();
-      // スライダーのイベント
       document.getElementById('moveBtnSize').addEventListener('input', e => setSizeAndSave('moveBtn', e.target.value));
       document.getElementById('sliderSize').addEventListener('input', e => setSizeAndSave('slider', e.target.value));
       document.getElementById('closeBtnSize').addEventListener('input', e => setSizeAndSave('closeBtn', e.target.value));
@@ -479,7 +485,6 @@
       document.getElementById("popupControls").style.display = "none";
     };
 
-    // 画面幅の変化でデフォルトサイズも再計算
     window.addEventListener('resize', () => {
       applyCustomSizes();
     });
