--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
       --move-btn-width: 6vw;
       --move-btn-height: 6vw;
       --move-btn-font: 2vw;
-      --move-btn-padding: 0.7vw 0;
+      --move-btn-padding: 0vw 0;
       --slider-width: 18vw;
       --slider-height: 3vw;
       --close-btn-font: 3vw;
-      --close-btn-padding: 1vw 2vw;
+      --close-btn-padding: 0vw vw;
     }
     @media (max-width: 600px) {
       :root {
